<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Safety" Id="{9ac51276-a3c2-4115-b10c-adf39bf6f5bc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Run			AT%Q* : BOOL;
	Start		AT%Q* : BOOL;
	Reset		AT%Q* : BOOL;
	
	SafetyInRun	AT%I* : BOOL;
	SaeftyOk 	AT%I* : BOOL;
	
	Error_Other	AT%I* : BOOL;
	Error_Out	AT%I* : BOOL;
	Error_Com	AT%I* : BOOL;
	
	HwStart 	AT%I* : BOOL;
	HwStop		AT%I* : BOOL;
	HwReset 	AT%I* : BOOL;
	
	HW_Ok			AT%Q* : BOOL;
	HW_Error	 	AT%Q* : BOOL;
	HW_Reset_Req 	AT%Q* : BOOL;
 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>