<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{1b4dff48-5fc4-4640-872d-67c650f13b5e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	nState,i: INT;
	fbR_TrigExecute : R_Trig;
	StartSafety :BOOL := TRUE;
	
	TcRestart : TC_Restart;
	Restart : BOOL;
	busy : BOOL;
	State AT%I* :ARRAY[1..2] OF UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i := 1 TO 8 DO 
	GVL_io.Voltage[i]:= SQRT( EXP(GVL_io.D_Spannung[i]) + EXP(GVL_io.Q_Spannung[i]));
END_FOR


IF GVL_Safety.hwStart THEN
	StartSafety := TRUE;
ELSIF NOT GVL_Safety.hwStop	THEN 
	StartSafety := FALSE;
END_IF

Safety(StartSafety AND NOT GVL_Safety.hwReset AND State[1] = 8 AND State[2] = 8 ) ;


TcRestart(
	NETID:= '', 
	RESTART:=Restart , 
	TMOUT:= , 
	BUSY=> busy, 
	ERR=> , 
	ERRID=> );]]></ST>
    </Implementation>
    <Method Name="Safety" Id="{5e78818f-12cb-483c-81e6-defbcc3ed4ae}">
      <Declaration><![CDATA[METHOD Safety : BOOL

VAR_INPUT
	bExecute : BOOL;
END_VAR

VAR

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbR_TrigExecute(CLK := bExecute);
IF fbR_TrigExecute.Q   THEN
	nState := 10;		
ELSIF NOT bExecute THEN
	nState := 0;
	GVL_Safety.Run := FALSE;
	
END_IF

CASE nState OF
	 0: // Wait State
	 	
	10: 
		GVL_Safety.Run := TRUE;
		GVL_Safety.Start := TRUE;
		GVL_Safety.Reset := TRUE;
		nState :=20;
	15:

		GVL_Safety.Reset := FALSE;
		nState :=200;

			
	20:
		GVL_Safety.Reset := FALSE;

		IF 	GVL_Safety.SaeftyOk THEN
			nState :=99;
			Safety := TRUE;
		ELSIF 	(GVL_Safety.Error_Other OR GVL_Safety.Error_Out OR GVL_Safety.Error_Com )  THEN 
		
			nState :=15;
		END_IF
	40:
		GVL_Safety.reset := TRUE;
		IF NOT (GVL_Safety.Error_Other OR GVL_Safety.Error_Out OR GVL_Safety.Error_Com )THEN
			GVL_Safety.Reset := FALSE;
			nState :=99;
		END_IF	
	99: 
		IF NOT GVL_Safety.SaeftyOk THEN
			nState :=40;
			Safety := TRUE;
		END_IF

	
END_CASE]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="16" Count="8" />
      <LineId Id="29" Count="7" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.Safety">
      <LineId Id="6" Count="13" />
      <LineId Id="56" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="57" Count="2" />
      <LineId Id="27" Count="7" />
      <LineId Id="61" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="35" Count="13" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>